Version 2.0.0rc7 - The "xxxxxxxxxxxxxxxx" version.
----------
2004-10-XX

	Jacobo221:
		On aMuleCMD:
		* Added 'list' (or 'find') command to search for a file in the downloads queue by name or by number (or just show all)
		* Added the ability to resume/pause all downloads at the same time through amulecmd (very handy when all downloads have been paused due to lack of space)
		* Fixed two bugs on amulecmd by which using 'pause' or 'resume' without arguments would pause/resume the oldest download.
		* Fixed a bug so that help command no longer is send to core
		* Fixed other commands sending blank data to core
		* Cleaned unneeded output log messages + added sent command messages to log (for easier security monitoring)
		* Several command simplifications on amulecmd to make it easier to use (while maintaining backwards compatibility).
		* Lots of translations lacks

	KingFish:
		* Fixed broken compilation in SysTray.cpp with gcc 3.3.4.

	Phoenix:
		* Fixed '&' char next to Preferences in amuleweb web page, as
		  reported by DreamWalker.
		* ExternalConn: protected GETCATTITLE command from buffer
		  overflow.
		* Start removing unused code from ExternalConn.cpp.
		* Fixed high CPU usage problem in amuleweb, thanks to jaguarwan for
		  the report. Daemonizing amuleweb should be done using the -q
		  switch.
		  
	ThePolish:
		* Little fix in wxCas SetSizer which caused display bug with wx-cvs
		* Add translations update (Thanks to all translators)
		* Removed wxCas documentation to slim source tree 
		(now downloadable from berlios)
		  
	Seagull:
		* Patch adding "Directory" column to the shared-files dialog.
		* Patch to add "Swap to this file" option for sources marked as 
		  "Asked For Another File" on download queue.
		  
	Xaignar:
		* Fixed the shared-files list, which would draw columns regardless 
		  of whenever or not they were hidden.
		* Fixed the progress-bars in the shared-files dialog. It should now